added test case for query params
